--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,15 +12,21 @@ services:
       - 8000:8000
     env_file:
       - ./env
+    depends_on:
+      - db
 
   db:
     image: mysql:latest
     ports:
-      - '3306:3306'
+      - 3306:3306
     environment:
       MYSQL_DATABASE: ${DATABASE_NAME}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+
+    volumes:
+      - db_data:/var/lib/mysql:rw
+      - ./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
 
   nginx:
     image: nginx:1.21.6-alpine
@@ -32,6 +38,6 @@ services:
       - media_volume:/cmp_api_python/media
 
 volumes:
-  postgres_data:
+  db_data:
   static_volume:
   media_volume:
