--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ constantly==15.1.0
 cryptography==37.0.2
 daphne==3.0.2
 Django==4.1.4
+djangorestframework==3.14.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
@@ -18,6 +19,7 @@ pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pycparser==2.21
 pyOpenSSL==22.0.0
+pytz==2022.7.1
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.3
