--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,24 +1,45 @@
-upstream blog {
+upstream cmp_api_python {
     server web:8000;
 }
 
 server {
-
     listen 80;
+    listen [::]:80;
+
+    server_name test.cloudminepro.com;
+
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    ssl_certificate /etc/nginx/certs/cloudminepro.crt;
+    ssl_certificate_key /etc/nginx/certs/cloudminepro.key;
+
+    server_name test.cloudminepro.com;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
 
     location / {
-        proxy_pass http://blog;
+        proxy_pass http://cmp_api_python;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
     location /static/ {
-        alias /blog/static/;
+        alias /cmp_api_python/static/;
     }
 
     location /media/ {
-        alias /blog/media/;
+        alias /cmp_api_python/media/;
     }
 
+    location ~ /\.(?!well-known).* {
+        deny all;
+    }
 }
