--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ attrs==21.4.0
 autobahn==22.5.1
 Automat==20.2.0
 autopep8==1.6.0
+certifi==2022.12.7
 cffi==1.15.0
+charset-normalizer==3.0.1
 constantly==15.1.0
 cryptography==37.0.2
 daphne==3.0.2
@@ -20,6 +22,7 @@ pycodestyle==2.8.0
 pycparser==2.21
 pyOpenSSL==22.0.0
 pytz==2022.7.1
+requests==2.28.2
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.3
@@ -28,4 +31,5 @@ Twisted==22.4.0
 txaio==22.2.1
 typing_extensions==4.2.0
 tzdata==2022.7
+urllib3==1.26.14
 zope.interface==5.4.0
