--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -3,8 +3,26 @@ upstream cmp_api_python {
 }
 
 server {
-
     listen 80;
+    listen [::]:80;
+
+    server_name test.cloudminepro.com;
+
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    ssl_certificate /etc/nginx/certs/cloudminepro.crt;
+    ssl_certificate_key /etc/nginx/certs/cloudminepro.key;
+
+    server_name test.cloudminepro.com;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
 
     location / {
         proxy_pass http://cmp_api_python;
@@ -21,4 +39,7 @@ server {
         alias /cmp_api_python/media/;
     }
 
+    location ~ /\.(?!well-known).* {
+        deny all;
+    }
 }
