--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,11 @@ google-auth-oauthlib==1.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
+mysql-connector-python==8.0.32
 mysqlclient==2.1.1
 oauthlib==3.2.2
 Pillow==9.1.1
+protobuf==3.20.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
