--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,18 @@ services:
     volumes:
       - db_data:/var/lib/mysql:rw
 
+  backup_db:
+    image: mysql:latest
+    ports:
+      - 3307:3306
+    environment:
+      MYSQL_DATABASE: ${DATABASE_NAME}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+
+    volumes:
+      - backup_db_data:/var/lib/mysql:rw
+
   nginx:
     image: nginx:1.21.6-alpine
     ports:
@@ -40,5 +52,6 @@ services:
 
 volumes:
   db_data:
+  backup_db_data:
   static_volume:
   media_volume:
