Split Django settings into development, production, staging configurations
- Create a 'settings' directory within the config folder
- Move existing settings.py to 'settings/base.py' as a base configuration
- Add 'development.py', 'production.py', 'staging.py' files that inherit from 'base.py'
- Update 'development.py', 'production.py', 'staging.py' with environment-specific settings
- Modify 'manage.py' and 'asgi.py' to use the 'settings' package
- Add setting's module in docker-compose
- Add logs folder in .gitignore

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,9 @@ version: "3.9"
 services:
   web:
     build: .
-    command: daphne cmp_api_python.asgi:application --bind 0.0.0.0 --port 8000
+    command: daphne config.asgi:application --bind 0.0.0.0 --port 8000
+    environment:
+      - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS}
     volumes:
       - ./:/cmp_api_python/
       - static_volume:/cmp_api_python/static
