--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     command: daphne config.asgi:application --bind 0.0.0.0 --port 8000
     environment:
-      - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS}
+      - DJANGO_SETTINGS_MODULE=config.settings.development
     volumes:
       - ./:/cmp_api_python/
       - static_volume:/cmp_api_python/static
@@ -29,26 +29,12 @@ services:
     volumes:
       - db_data:/var/lib/mysql:rw
 
-  backup_db:
-    image: mysql:latest
-    ports:
-      - 3307:3306
-    environment:
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-
-    volumes:
-      - backup_db_data:/var/lib/mysql:rw
-
   nginx:
     image: nginx:1.21.6-alpine
     ports:
       - 80:80
-      - 443:443
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d
-      - ./data/certs:/etc/nginx/certs:ro
+      - ./data/nginx/nginx.dev.conf:/etc/nginx/nginx.conf
       - static_volume:/cmp_api_python/static
       - media_volume:/cmp_api_python/media
 
