--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,6 @@ TETHER_PASSWORD=
 
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
-GOOGLE_OAUTH_REDIRECT_URI=""
+GOOGLE_OAUTH_REDIRECT_URI=
+
+SENTRY_DSN=
