--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pycparser==2.21
+PyJWT==2.6.0
 pyOpenSSL==22.0.0
 pypng==0.20220715.0
 pytz==2022.7.1
