--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ constantly==15.1.0
 cryptography==37.0.2
 daphne==3.0.2
 Django==4.1.4
+django-cors-headers==3.14.0
 django-otp==1.1.4
 django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
