Remove nginx and add network to docker-compose.staging.yaml
- Adding corsheaders middleware to the staging mode in settings.py to enable Cross-Origin Resource Sharing (CORS) support
- Removing nginx configuration from docker-compose.staging.yaml to use a separate nginx container
- Adding network configurations for communication between the nginx and the backend containers

--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -16,6 +16,8 @@ services:
       - ./.env
     depends_on:
       - db
+    networks:
+      - my_network
 
   db:
     image: mysql:latest
@@ -25,9 +27,10 @@ services:
       MYSQL_DATABASE: ${DATABASE_NAME}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-
     volumes:
       - db_data:/var/lib/mysql:rw
+    networks:
+      - my_network
 
   backup_db:
     image: mysql:latest
@@ -37,24 +40,20 @@ services:
       MYSQL_DATABASE: ${DATABASE_NAME}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-
     volumes:
       - backup_db_data:/var/lib/mysql:rw
+    networks:
+      - my_network
 
-  nginx:
-    image: nginx:1.21.6-alpine
-    ports:
-      - 80:80
-      - 443:443
-    volumes:
-      - ./data/nginx/nginx.staging.conf:/etc/nginx/nginx.conf
-      - ./data/certs:/etc/nginx/certs:ro
-      - static_volume:/cmp_api_python/static
-      - media_volume:/cmp_api_python/media
-  #TODO: Add redis
+#TODO: Add redis
 
 volumes:
   db_data:
   backup_db_data:
   static_volume:
   media_volume:
+
+
+networks:
+  my_network:
+    external: true
