Modify named volumes as external to share data between containers
- Changing the static_volume and media_volume volumes as external in the docker-compose file
- This will allow other containers to access the static and media files stored in these volumes

--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -51,8 +51,9 @@ volumes:
   db_data:
   backup_db_data:
   static_volume:
+    external: true
   media_volume:
-
+    external: true
 
 networks:
   my_network:
