--- a/data/nginx/nginx.dev.conf
+++ b/data/nginx/nginx.dev.conf
@@ -3,11 +3,15 @@ events {
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    include mime.types;
+    default_type application/octet-stream;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    sendfile on;
+    keepalive_timeout 65;
+
+    client_max_body_size 10M;
+    client_header_buffer_size 16k;
+    large_client_header_buffers 4 16k;
 
     server {
         listen 80;
