--- a/data/nginx/nginx.staging.conf
+++ b/data/nginx/nginx.staging.conf
@@ -9,6 +9,10 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    client_max_body_size 10M;
+    client_header_buffer_size 16k;
+    large_client_header_buffers 4 16k;
+
     upstream django_staging {
         server web:8000;
     }
