--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.1.1
+anyio==3.6.2
 asgiref==3.6.0
 async-timeout==4.0.2
 attrs==21.4.0
@@ -25,6 +26,9 @@ django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 google-auth==2.16.2
 google-auth-oauthlib==1.0.0
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
@@ -42,15 +46,18 @@ pycparser==2.21
 PyJWT==2.6.0
 pyOpenSSL==22.0.0
 pypng==0.20220715.0
+python-telegram-bot==20.2
 pytz==2022.7.1
 qrcode==7.4.2
 redis==4.5.1
 requests==2.28.2
 requests-oauthlib==1.3.1
+rfc3986==1.5.0
 rsa==4.9
 sentry-sdk==1.16.0
 service-identity==21.1.0
 six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.3
 toml==0.10.2
 Twisted==22.4.0
