Add Redis and Celery services to docker-compose.dev.yaml
- Including Redis and Celery services in the development Docker Compose configuration to enable background task processing and caching in the development environment
- Configuring the Redis service to use the latest Redis image
- Setting up the Celery service to use the project's Docker image and run the Celery worker with appropriate settings

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -38,8 +38,25 @@ services:
       - static_volume:/cmp_api_python/static
       - media_volume:/cmp_api_python/media
 
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+
+  celery:
+    build: .
+    command: celery -A config worker --loglevel=info
+    volumes:
+      - ./:/cmp_api_python/
+    depends_on:
+      - redis
+    env_file:
+      - ./.env
+
 volumes:
   db_data:
   backup_db_data:
   static_volume:
+    external: true
   media_volume:
+    external: true
