Add Celery Beat and its dependencies to docker-compose.dev.yaml
- Updating requirements.txt to include django-celery-beat package
- Modifying Django settings to configure Celery Beat schedules
- This commit sets up the project to use Celery Beat for periodic task scheduling and ensures that all necessary dependencies are installed

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -43,9 +43,19 @@ services:
     ports:
       - "6379:6379"
 
-  celery:
+  celery_worker:
     build: .
     command: celery -A config worker --loglevel=info
+    volumes:
+      - ./:/cmp_api_python/
+    depends_on:
+      - redis
+    env_file:
+      - ./.env
+
+  celery_beat:
+    build: .
+    command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - ./:/cmp_api_python/
     depends_on:
