--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,14 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 constantly==15.1.0
+cron-descriptor==1.3.0
 cryptography==37.0.2
 daphne==3.0.2
 Django==4.1.4
+django-celery-beat==2.5.0
 django-cors-headers==3.14.0
 django-otp==1.1.4
+django-timezone-field==5.0
 django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 google-auth==2.16.2
@@ -46,6 +49,8 @@ pycparser==2.21
 PyJWT==2.6.0
 pyOpenSSL==22.0.0
 pypng==0.20220715.0
+python-crontab==2.7.1
+python-dateutil==2.8.2
 python-telegram-bot==20.2
 pytz==2022.7.1
 qrcode==7.4.2
