--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -45,7 +45,30 @@ services:
     networks:
       - my_network
 
-#TODO: Add redis
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+
+  celery_worker:
+    build: .
+    command: celery -A config worker --loglevel=info
+    volumes:
+      - ./:/cmp_api_python/
+    depends_on:
+      - redis
+    env_file:
+      - ./.env
+
+  celery_beat:
+    build: .
+    command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    volumes:
+      - ./:/cmp_api_python/
+    depends_on:
+      - redis
+    env_file:
+      - ./.env
 
 volumes:
   db_data:
