Add external network to Redis, Celery Worker, and Celery Beat services in docker-compose.staging.yaml
- Configuring Redis, Celery Worker, and Celery Beat services to use an external network for communication in the staging environment
- This change improves network isolation and enables better communication between these services and other components in the staging environment that share the same external network

--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -49,6 +49,8 @@ services:
     image: "redis:latest"
     ports:
       - "6379:6379"
+    networks:
+      - my_network
 
   celery_worker:
     build: .
@@ -59,6 +61,8 @@ services:
       - redis
     env_file:
       - ./.env
+    networks:
+      - my_network
 
   celery_beat:
     build: .
@@ -69,6 +73,8 @@ services:
       - redis
     env_file:
       - ./.env
+    networks:
+      - my_network
 
 volumes:
   db_data:
