--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   web:
+    container_name: django_api
     build: .
     command: daphne config.asgi:application --bind 0.0.0.0 --port 8000
     environment:
@@ -20,6 +21,7 @@ services:
       - my_network
 
   db:
+    container_name: django_db
     image: mysql:latest
     ports:
       - 3306:3306
@@ -46,6 +48,7 @@ services:
       - my_network
 
   redis:
+    container_name: django_redis
     image: "redis:latest"
     ports:
       - "6379:6379"
@@ -53,6 +56,7 @@ services:
       - my_network
 
   celery_worker:
+    container_name: django_celery_worker
     build: .
     command: celery -A config worker --loglevel=info
     volumes:
@@ -65,6 +69,7 @@ services:
       - my_network
 
   celery_beat:
+    container_name: django_celery_beat
     build: .
     command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
