--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -30,6 +30,7 @@ services:
   db:
     container_name: django_db
     image: mysql:latest
+    command: --max_connections=1000
     ports:
       - 3306:3306
     environment:
