--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   web:
+    container_name: django_api
     build: .
     command: daphne config.asgi:application --bind 0.0.0.0 --port 8000
     environment:
@@ -16,45 +17,65 @@ services:
       - ./.env
     depends_on:
       - db
+    networks:
+      - my_network
 
   db:
+    container_name: django_db
     image: mysql:latest
+    command: --max_connections=1000
     ports:
       - 3306:3306
     environment:
       MYSQL_DATABASE: ${DATABASE_NAME}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
-
     volumes:
       - db_data:/var/lib/mysql:rw
+    networks:
+      - my_network
 
-  backup_db:
-    image: mysql:latest
+  redis:
+    container_name: django_redis
+    image: "redis:latest"
     ports:
-      - 3307:3306
-    environment:
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      - "6379:6379"
+    networks:
+      - my_network
 
+  celery_worker:
+    container_name: django_celery_worker
+    build: .
+    command: celery -A config worker --loglevel=info
     volumes:
-      - backup_db_data:/var/lib/mysql:rw
+      - ./:/cmp_api_python/
+    depends_on:
+      - redis
+    env_file:
+      - ./.env
+    networks:
+      - my_network
 
-  nginx:
-    image: nginx:1.21.6-alpine
-    ports:
-      - 80:80
-      - 443:443
+  celery_beat:
+    container_name: django_celery_beat
+    build: .
+    command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
-      - ./data/nginx/nginx.prod.conf:/etc/nginx/nginx.conf
-      - ./data/certs:/etc/nginx/certs:ro
-      - static_volume:/cmp_api_python/static
-      - media_volume:/cmp_api_python/media
-  #TODO: Add redis
+      - ./:/cmp_api_python/
+    depends_on:
+      - redis
+    env_file:
+      - ./.env
+    networks:
+      - my_network
 
 volumes:
   db_data:
-  backup_db_data:
   static_volume:
+    external: true
   media_volume:
+    external: true
+
+networks:
+  my_network:
+    external: true
