--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ autobahn==22.5.1
 Automat==20.2.0
 autopep8==1.6.0
 billiard==3.6.4.0
+boto3==1.27.0
+botocore==1.30.0
 cachetools==5.3.0
 celery==5.2.7
 certifi==2022.12.7
@@ -35,6 +37,7 @@ httpx==0.23.3
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
+jmespath==1.0.1
 kombu==5.2.4
 mysql-connector-python==8.0.32
 mysqlclient==2.1.1
@@ -59,6 +62,7 @@ requests==2.28.2
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rsa==4.9
+s3transfer==0.6.1
 sentry-sdk==1.16.0
 service-identity==21.1.0
 six==1.16.0
