--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -5,6 +5,7 @@ services:
     container_name: django_api
     build: .
     command: daphne config.asgi:application --bind 0.0.0.0 --port 8000
+    restart: always
     environment:
       - DJANGO_SETTINGS_MODULE=config.settings.production
     volumes:
@@ -24,6 +25,7 @@ services:
     container_name: django_db
     image: mysql:latest
     command: --max_connections=1000
+    restart: always
     ports:
       - 3306:3306
     environment:
@@ -38,6 +40,7 @@ services:
   redis:
     container_name: django_redis
     image: "redis:latest"
+    restart: always
     ports:
       - "6379:6379"
     networks:
@@ -47,6 +50,7 @@ services:
     container_name: django_celery_worker
     build: .
     command: celery -A config worker --loglevel=info
+    restart: always
     volumes:
       - ./:/cmp_api_python/
     depends_on:
@@ -60,6 +64,7 @@ services:
     container_name: django_celery_beat
     build: .
     command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    restart: always
     volumes:
       - ./:/cmp_api_python/
     depends_on:
