--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -2,7 +2,7 @@
 # If they don't, you can create them with
 # docker network create my_network and docker volume create backup_db_data.
 # Note: To run backup_db directly from the Docker CLI run the below steps
-# docker container run --name django_backup_db -p 3307:3306 -e MYSQL_DATABASE=${DATABASE_NAME} -e MYSQL_PASSWORD=${DATABASE_PASSWORD}
+# docker container run -d --name django_backup_db -p 3307:3306 -e MYSQL_DATABASE=${DATABASE_NAME} -e MYSQL_PASSWORD=${DATABASE_PASSWORD}
 # -e MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD} -v backup_db_data:/var/lib/mysql --network my_network mysql:latest
 
 version: "3.9"
@@ -12,6 +12,7 @@ services:
     container_name: django_api
     build: .
     command: daphne config.asgi:application --bind 0.0.0.0 --port 8000
+    restart: always
     environment:
       - DJANGO_SETTINGS_MODULE=config.settings.staging
     volumes:
@@ -31,6 +32,7 @@ services:
     container_name: django_db
     image: mysql:latest
     command: --max_connections=1000
+    restart: always
     ports:
       - 3306:3306
     environment:
@@ -45,6 +47,7 @@ services:
   redis:
     container_name: django_redis
     image: "redis:latest"
+    restart: always
     ports:
       - "6379:6379"
     networks:
@@ -54,6 +57,7 @@ services:
     container_name: django_celery_worker
     build: .
     command: celery -A config worker --loglevel=info
+    restart: always
     volumes:
       - ./:/cmp_api_python/
     depends_on:
@@ -67,6 +71,7 @@ services:
     container_name: django_celery_beat
     build: .
     command: celery -A config beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    restart: always
     volumes:
       - ./:/cmp_api_python/
     depends_on:
