Modify docker-compose in staging and development
- Adding -h db_backup to db_backup service description in docker-compose.staging.yaml which specifies the hostname of the container
- Removing redis, celery_worker, celery_beat services from docker-compose.dev.yaml because they are no longer needed in the development environment
- Removing backup_db_data volume from docker-compose.dev.yaml

--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -2,7 +2,7 @@
 # If they don't, you can create them with
 # docker network create my_network and docker volume create backup_db_data.
 # Note: To run backup_db directly from the Docker CLI run the below steps
-# docker container run -d --name django_backup_db -p 3307:3306 -e MYSQL_DATABASE=${DATABASE_NAME} -e MYSQL_PASSWORD=${DATABASE_PASSWORD}
+# docker container run -d --name django_backup_db -h db_backup -p 3307:3306 -e MYSQL_DATABASE=${DATABASE_NAME} -e MYSQL_PASSWORD=${DATABASE_PASSWORD}
 # -e MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD} -v backup_db_data:/var/lib/mysql --network my_network mysql:latest
 
 version: "3.9"
